validate the information exist and the text is the same at the Test Case: TC003

--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "* Iniciando os testes em Playwright",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test":"npx playwright test",
+    "test-ui":"npx playwright test --ui",
+    "debug":"npx playwright test --debug"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
